# decomp-mcp

./: .codex.config.toml.example  .dockerignore  .gitignore  .mcp.claude-desktop.json.example  .mcp.json.example  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: artifact-format.md  deployment.md  jadx-artifact-format.md  security.md  troubleshooting.md
ghidra_scripts/: DecompileArtifacts.java
schemas/: index.schema.json  jadx-index.schema.json  manifest.schema.json  metadata.schema.json
src/decomp_mcp/: __init__.py  cache.py  docker_worker.py  ghidra_runner.py  hashing.py  jadx_runner.py  logging_config.py  models.py  paths.py  server.py  worker_cli.py
src/decomp_mcp/clients/: __init__.py  direct_mcp_smoke.py  llm_e2e.py
tests/integration/: test_docker_decompile.py  test_llm_e2e.py
tests/samples/: Makefile  build_hello_elf.py  hello.c
tests/unit/: test_cache.py  test_docker_worker.py  test_hashing.py  test_jadx_models.py  test_jadx_runner.py  test_models.py  test_paths.py  test_runner.py  test_schemas.py
